[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/projectile/projectile.gd" type="Script" id=1]
[ext_resource path="res://scenes/projectile/bullet.png" type="Texture" id=2]
[ext_resource path="res://scenes/projectile/bullet_impact.png" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="AtlasTexture" id=2]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 23
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 23
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "bullet_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "bullet_impact",
"speed": 10.0
} ]

[node name="Projectile" type="KinematicBody"]
collision_layer = 8
collision_mask = 524294
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Body" type="AnimatedSprite3D" parent="."]
pixel_size = 0.002
billboard = 1
frames = SubResource( 7 )
animation = "bullet_idle"

[node name="Light" type="OmniLight" parent="."]
light_color = Color( 0.701961, 0.2, 0.2, 1 )
light_energy = 0.5
light_indirect_energy = 0.5

[connection signal="state_changed" from="." to="." method="_on_Projectile_state_changed"]
[connection signal="animation_finished" from="Body" to="." method="_on_Body_animation_finished"]
